--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^4.6.0",
+    "node-sass": "^6.0.0",
     "random-words": "^1.1.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
     "react-compound-timer": "^1.2.0",
     "react-dom": "^17.0.2",
     "react-highlight-regex": "^0.1.1",
