--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
-    "node-sass": "^6.0.0",
     "random-words": "^1.1.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
@@ -40,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.32.13",
+    "sass-loader": "^10.1.1",
+    "webpack": "^4.44.2"
   }
 }
