set up backend. still needs to be connected to frontend

--- a/client/package.json
+++ b/client/package.json
@@ -44,5 +44,6 @@
     "sass": "^1.32.13",
     "sass-loader": "^10.1.1",
     "webpack": "^4.44.2"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
